k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myvizion-webservice
spec:
  selector:
    app: myvizion
  ports:
    - port: 80 # Default port for image
