k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myvizion-ingress
spec:
  rules:
  - host: myvizion.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myvizion-service
            port:
              number: 80
